syntax = "proto3";

package pb;

option go_package = "github.com/ebukacodes21/soleluxury-server/pb";

import "store.proto";

message CreateStoreRequest {
    string name = 1;
}

message CreateStoreResponse {
    Store store = 1;
}